testData/testprojects/intellij-integration/src/java/org/pantsbuild/testproject/failures/simple/simpleCompilationOutput.txt

17:35:55 00:00 [main]
               (To run a reporting server: ./pants server)
17:35:55 00:00   [bootstrap]
17:35:55 00:00   [setup]
17:35:55 00:00     [parse]
               Executing tasks in goals: bootstrap -> imports -> unpack-jars -> deferred-sources -> gen -> resolve -> compile
17:35:55 00:00   [bootstrap]
17:35:55 00:00     [bootstrap-jvm-tools]
17:35:55 00:00   [imports]
17:35:55 00:00     [ivy-imports]
17:35:55 00:00   [unpack-jars]
17:35:55 00:00     [unpack-jars]
17:35:55 00:00   [deferred-sources]
17:35:55 00:00     [deferred-sources]
17:35:55 00:00   [gen]
17:35:55 00:00     [thrift]
17:35:55 00:00     [protoc]
17:35:55 00:00     [antlr]
17:35:55 00:00     [ragel]
17:35:55 00:00     [jaxb]
17:35:55 00:00     [wire]
17:35:55 00:00     [aapt]
17:35:55 00:00   [resolve]
17:35:55 00:00     [ivy]
17:35:55 00:00   [compile]
17:35:55 00:00     [compile]
17:35:55 00:00     [jvm]
17:35:55 00:00       [jvm-compilers]
17:35:55 00:00         [find-deleted-sources]
17:35:55 00:00         [prepare-analysis]
                     Invalidated 1 target.
17:35:55 00:00         [partition-analysis]
                     Compiling 1 java source in 1 target (partition 1 of 1).
17:35:55 00:00         [compile]
17:35:55 00:00           [jmake]
                         /home/rushana/outreach/new9/intellij-pants-plugin/testData/testprojects/intellij-integration/src/java/org/pantsbuild/testproject/failures/simple/HelloWorld.java:11: error: invalid method declaration; return type required
                           public static deprecatedMethod() {
                                         ^
                         /home/rushana/outreach/new9/intellij-pants-plugin/testData/testprojects/intellij-integration/src/java/org/pantsbuild/testproject/failures/simple/HelloWorld.java:17: error: illegal start of expression
                           public static void main(String[] args) {
                           ^
                         /home/rushana/outreach/new9/intellij-pants-plugin/testData/testprojects/intellij-integration/src/java/org/pantsbuild/testproject/failures/simple/HelloWorld.java:17: error: illegal start of expression
                           public static void main(String[] args) {
                                  ^
                         /home/rushana/outreach/new9/intellij-pants-plugin/testData/testprojects/intellij-integration/src/java/org/pantsbuild/testproject/failures/simple/HelloWorld.java:17: error: ';' expected
                           public static void main(String[] args) {
                                        ^
                         /home/rushana/outreach/new9/intellij-pants-plugin/testData/testprojects/intellij-integration/src/java/org/pantsbuild/testproject/failures/simple/HelloWorld.java:17: error: '.class' expected
                           public static void main(String[] args) {
                                                            ^
                         /home/rushana/outreach/new9/intellij-pants-plugin/testData/testprojects/intellij-integration/src/java/org/pantsbuild/testproject/failures/simple/HelloWorld.java:17: error: ';' expected
                           public static void main(String[] args) {
                                                                ^
                         /home/rushana/outreach/new9/intellij-pants-plugin/testData/testprojects/intellij-integration/src/java/org/pantsbuild/testproject/failures/simple/HelloWorld.java:18: error: ';' expected
                             System.out.println("Hello World!") /* missed semicolon: ; */
                                                               ^
                         /home/rushana/outreach/new9/intellij-pants-plugin/testData/testprojects/intellij-integration/src/java/org/pantsbuild/testproject/failures/simple/HelloWorld.java:20: error: reached end of file while parsing
                         }
                          ^
                         Jmake version 1.3.8-10
                         Opening project database...  Done.
                         Recompiling source files:
                         /home/rushana/outreach/new9/intellij-pants-plugin/testData/testprojects/intellij-integration/src/java/org/pantsbuild/testproject/failures/simple/HelloWorld.java
                         Reading existing dependency file at /home/rushana/outreach/new9/intellij-pants-plugin/.pants.d/compile/jvm/java/jmake-depfiles/global_depfile
                         Writing class dependency file to /home/rushana/outreach/new9/intellij-pants-plugin/.pants.d/compile/jvm/java/jmake-depfiles/global_depfile
                         Writing project database...  Done.
                         
FAILURE: compilation error


               Waiting for background workers to finish.
               FAILURE
